# pencil-finance-contract-solana

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
.kiro/specs/solana-comprehensive-testing/: design.md  requirements.md  tasks.md
.kiro/specs/solana-evm-parity/: design.md  requirements.md  task1-implementation-summary.md  task10-implementation-summary.md  task12-implementation-summary.md  task13-implementation-summary.md  task2-implementation-summary.md  task3-implementation-summary.md  task5-implementation-summary.md  task6-implementation-summary.md  task7-implementation-summary.md  task8-implementation-summary.md  task9-implementation-summary.md  tasks.md
docs/: FINAL_REPORT.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  FIX_SUMMARY.md  PROGRESS_REPORT.md  PROGRESS_UPDATE.md  TEST_FIX_COMPLETE_REPORT.md
programs/pencil-solana/: Cargo.toml
programs/pencil-solana/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/pencil-solana/src/instructions/: asset_pool.rs  funding.rs  mod.rs  repayment.rs  system_config.rs  tokens.rs  utils.rs
scripts/: README.md  add-asset-whitelist.ts  configure.ts  deploy.ts  init-related-accounts.ts  init-system-config.ts  transfer-admin.ts
tests/: main-flow.test.ts  pencil-solana.ts
tests/helpers/: README.md  account-utils.ts  assertion-utils.ts  index.ts  setup.ts  token-utils.ts
