[package]
name = "pencil-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(anchor_debug)',
    'cfg(feature, values("anchor-debug"))',
    'cfg(feature, values("custom-heap"))',
    'cfg(feature, values("custom-panic"))',
    'cfg(target_os, values("solana"))'
] }

[lib]
crate-type = ["cdylib", "lib"]
name = "pencil_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]


[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
